// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OptionGroup renders a default state 1`] = `
<div>
  <div
    class="group/fui-option-group"
    role="group"
  >
    Default OptionGroup
  </div>
</div>
`;

exports[`OptionGroup renders with a label 1`] = `
<div>
  <div
    aria-labelledby="group-label_r_a_"
    class="group/fui-option-group"
    role="group"
  >
    <span
      class=""
      id="group-label_r_a_"
      role="presentation"
    >
      optgroup label
    </span>
    Default OptionGroup
  </div>
</div>
`;
